# rt-summer

./: .gitignore  Cargo.toml
src/: bvh.rs  bxdf.rs  camera.rs  color.rs  film.rs  geometry.rs  image_writer.rs  integrator.rs  main.rs  math.rs  pbrt_loader.rs  render_threads.rs  sampling.rs  scene.rs  texture.rs  util.rs  vecmath.rs
src/color/: color_space.rs  spectrum.rs
src/color/spectrum/: rgb_spectrum.rs
src/geometry/: ray.rs  sphere.rs  trianglemesh.rs
src/integrator/: shading_geometry.rs
src/pbrt_loader/: lexer.rs  params.rs  ply_mesh.rs  scene_description.rs
src/scene/: light_sampler.rs  octamap.rs  primitive.rs
