[package]
name = "rt-summer"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.24.0", features = ["debug-glam-assert", "std"] }

rgb2spec = "0.1.1"
ply-rs = "0.1.3"
flate2 = "1.0"
image = { version = "0.24.6", default-features = false, features = [
    "jpeg",
    "png",
] }
exr = "1.6.3"
minifb = "0.24.0"

rand = { version = "0.8.5", default-features = false, features = [
    "small_rng",
    "getrandom",
] }
eyre = "0.6.8"
smallvec = "1.10.0"
num_cpus = "1.15.0"
bus = "2.4.0"
lexopt = "0.3.0"
enum-ptr = "0.1.8"

[dev-dependencies]
plotters = "0.3"

[profile.release]
debug-assertions = true

[profile.release-full]
inherits = "release"
debug-assertions = false
lto = "fat"

[profile.dev.package."*"]
opt-level = 3
